spring-ai/src/main/kotlin/org/example/springai/analyzer/error/SlackClient.kt
package org.example.springai.analyzer.error

import com.fasterxml.jackson.core.type.TypeReference
import com.fasterxml.jackson.module.kotlin.jacksonObjectMapper
import org.springframework.beans.factory.annotation.Value
import org.springframework.http.MediaType
import org.springframework.stereotype.Component
import org.springframework.web.client.RestClient

@Component
class SlackClient(
    @Value("\${slack.webhook.url}")
    private val url: String,
) {
    private val restClient: RestClient = RestClient.create()

    fun sendErrorNotification(output: IoFormat.Output) {
        val blocks = """
            {
              "blocks": [
                {
                  "type": "header",
                  "text": {
                    "type": "plain_text",
                    "text": "ğŸš¨ì˜ˆì™¸ ë¶„ì„ ë¦¬í¬íŠ¸"
                  }
                },
                {
                  "type": "divider"
                },
                {
                  "type": "section",
                  "text": {
                      "type": "mrkdwn",
                      "text": "*í•µì‹¬ ì˜ˆì™¸:*\n`${output.rootCause}`"
                    }
                },
                {
                  "type": "section",
                  "text": {
                      "type": "mrkdwn",
                      "text": "*ìœ ì € í–‰ë™:*\n${output.userPerspective}"
                    }
                },
                {
                  "type": "section",
                  "text": {
                    "type": "mrkdwn",
                    "text": "*ìƒì„¸ ì„¤ëª…:*\n> ${output.reason}"
                  }
                },
                {
                  "type": "divider"
                },
                {
                  "type": "context",
                  "elements": [
                    {
                      "type": "mrkdwn",
                      "text": "í•´ë‹¹ ë¶„ì„ì€ AIì— ì˜í•´ ìƒì„±ë˜ì—ˆìŠµë‹ˆë‹¤."
                    }
                  ]
                }
              ]
            }
        """.trimIndent()
        val body = jacksonObjectMapper().readValue(blocks, object : TypeReference<Map<String, Any>>() {})

        val response = restClient.post()
            .uri(url)
            .contentType(MediaType.APPLICATION_JSON)
            .body(body)
            .retrieve()
            .body(String::class.java)
        print(response)
    }
}